[GTK] v2.3.3 fails to build in Debian / FreeBSD https://bugs.webkit.org/show_bug.cgi?id=126502

Reviewed by Mark Lam.

* wtf/Platform.h: Add LLINT support to FreeBSD.

Canonical link: https://commits.webkit.org/145063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162086 268f45cc-cd09-0410-ab3c-d52691b4dbfc